--- a/heartattackanalysis.ipynb
+++ b/heartattackanalysis.ipynb
@@ -34,11 +34,6 @@
     "# Input data files are available in the read-only \"../input/\" directory\n",
     "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
     "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
     "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
     "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
    ]
@@ -65,7 +60,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"C:/Users/tabis/Documents/GitHub/heart attack prediction app/Heart datasets/heart.csv\")"
+    "df = pd.read_csv(\"E:/Project Work/Heart-Attack-Prediction-App/Heart datasets/heart.csv\")"
    ]
   },
   {
@@ -776,7 +771,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1cbc57d9510>"
+       "<seaborn.axisgrid.FacetGrid at 0x1df0fb24c10>"
       ]
      },
      "execution_count": 12,
@@ -2089,37 +2084,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "trees : 50 ==> score : 29.223606700730663\n",
-      "trees : 55 ==> score : 31.422698955045668\n",
-      "trees : 60 ==> score : 32.49720673908293\n",
-      "trees : 65 ==> score : 32.32766867644358\n",
-      "trees : 70 ==> score : 33.207250334717386\n",
-      "trees : 75 ==> score : 31.614052036054442\n",
-      "trees : 80 ==> score : 30.343408868328183\n",
-      "trees : 85 ==> score : 29.7133610991144\n",
-      "trees : 90 ==> score : 31.89740003624213\n",
-      "trees : 95 ==> score : 31.98019633322441\n",
-      "trees : 100 ==> score : 32.19259941970716\n",
-      "trees : 105 ==> score : 31.644332343537172\n",
-      "trees : 110 ==> score : 32.01814641441369\n",
-      "trees : 115 ==> score : 31.61461207651245\n",
-      "trees : 120 ==> score : 32.1887624284853\n",
-      "trees : 125 ==> score : 29.803561180677317\n",
-      "trees : 130 ==> score : 32.602982180529914\n",
-      "trees : 135 ==> score : 30.735283301571727\n",
-      "trees : 140 ==> score : 32.66637332942919\n",
-      "trees : 145 ==> score : 30.453689636418446\n",
-      "trees : 150 ==> score : 32.84928623924218\n",
-      "trees : 155 ==> score : 30.19277706640775\n",
-      "trees : 160 ==> score : 31.5817325510491\n",
-      "trees : 165 ==> score : 32.98245860767032\n",
-      "trees : 170 ==> score : 30.640392148376815\n",
-      "trees : 175 ==> score : 30.538744433443476\n",
-      "trees : 180 ==> score : 31.801832691438115\n",
-      "trees : 185 ==> score : 31.961036129075815\n",
-      "trees : 190 ==> score : 32.10797867862313\n",
-      "trees : 195 ==> score : 31.44584365018508\n",
-      "trees : 200 ==> score : 32.29425156284654\n"
+      "trees : 50 ==> score : 34.11041884076105\n",
+      "trees : 55 ==> score : 29.53208341925815\n",
+      "trees : 60 ==> score : 29.079756996696528\n",
+      "trees : 65 ==> score : 31.737999615558042\n",
+      "trees : 70 ==> score : 29.652188176778584\n",
+      "trees : 75 ==> score : 30.338386407331242\n",
+      "trees : 80 ==> score : 30.91570475431181\n",
+      "trees : 85 ==> score : 30.255868326725853\n",
+      "trees : 90 ==> score : 32.54819190945758\n",
+      "trees : 95 ==> score : 33.85646597847497\n",
+      "trees : 100 ==> score : 32.045769835356055\n",
+      "trees : 105 ==> score : 31.80231980241003\n",
+      "trees : 110 ==> score : 31.20926507668087\n",
+      "trees : 115 ==> score : 31.40976530855587\n",
+      "trees : 120 ==> score : 32.9373422611497\n",
+      "trees : 125 ==> score : 31.796328350003467\n",
+      "trees : 130 ==> score : 31.683190848584943\n",
+      "trees : 135 ==> score : 33.586745585848476\n",
+      "trees : 140 ==> score : 31.318060203509134\n",
+      "trees : 145 ==> score : 31.14433614025436\n",
+      "trees : 150 ==> score : 30.66936743276919\n",
+      "trees : 155 ==> score : 30.87747227222669\n",
+      "trees : 160 ==> score : 30.554612357710663\n",
+      "trees : 165 ==> score : 32.51310985169204\n",
+      "trees : 170 ==> score : 32.09946309217844\n",
+      "trees : 175 ==> score : 32.745076647450034\n",
+      "trees : 180 ==> score : 30.180367644937444\n",
+      "trees : 185 ==> score : 31.056306799099197\n",
+      "trees : 190 ==> score : 32.45730671774504\n",
+      "trees : 195 ==> score : 32.797307298905196\n",
+      "trees : 200 ==> score : 30.262006781392582\n"
      ]
     }
    ],
@@ -2197,7 +2192,7 @@
     {
      "data": {
       "text/plain": [
-       "31.407062838875433"
+       "31.44240334217081"
       ]
      },
      "execution_count": 43,
@@ -2259,26 +2254,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5 24.501215251126606\n",
-      "6 21.46679042884584\n",
+      "5 23.632003034396664\n",
+      "6 21.11924967173061\n",
       "7 17.82413204038872\n",
       "8 18.4250848147125\n",
       "9 15.956821465243465\n",
-      "10 26.418741194450423\n",
-      "11 11.435423979750237\n",
-      "12 12.260496513599362\n",
+      "10 21.31429245170381\n",
+      "11 13.360593225398198\n",
+      "12 21.06127020799008\n",
       "13 12.260496513599362\n",
-      "14 7.860109666404003\n",
-      "15 12.260496513599362\n",
-      "16 12.260496513599362\n",
+      "14 16.66088336079472\n",
+      "15 16.66088336079472\n",
+      "16 21.06127020799008\n",
       "17 21.06127020799008\n",
       "18 12.260496513599362\n",
-      "19 16.66088336079472\n",
-      "20 12.260496513599362\n",
-      "21 16.66088336079472\n",
-      "22 12.260496513599362\n",
+      "19 12.260496513599362\n",
+      "20 7.860109666404003\n",
+      "21 7.860109666404003\n",
+      "22 7.860109666404003\n",
       "23 12.260496513599362\n",
-      "24 7.860109666404003\n"
+      "24 21.06127020799008\n"
      ]
     }
    ],
@@ -2353,7 +2348,7 @@
     {
      "data": {
       "text/plain": [
-       "0.2106127020799008"
+       "0.12260496513599362"
       ]
      },
      "execution_count": 47,
@@ -2509,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "id": "bd36f294",
    "metadata": {
     "execution": {
@@ -2534,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "id": "b8e89b77",
    "metadata": {
     "execution": {
@@ -2559,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 67,
    "id": "a021b879",
    "metadata": {
     "execution": {
@@ -2581,13 +2576,13 @@
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-5 {color: black;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-6 {color: black;}#sk-container-id-6 pre{padding: 0;}#sk-container-id-6 div.sk-toggleable {background-color: white;}#sk-container-id-6 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-6 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-6 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-6 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-6 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-6 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-6 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-6 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-6 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-6 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-6 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-6 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-6 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-6 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-6 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-6 div.sk-item {position: relative;z-index: 1;}#sk-container-id-6 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-6 div.sk-item::before, #sk-container-id-6 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-6 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-6 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-6 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-6 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-6 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-6 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-6 div.sk-label-container {text-align: center;}#sk-container-id-6 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-6 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-6\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-6\" type=\"checkbox\" checked><label for=\"sk-estimator-id-6\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">KNeighborsClassifier</label><div class=\"sk-toggleable__content\"><pre>KNeighborsClassifier()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "KNeighborsClassifier()"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2598,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "id": "abdabfdc",
    "metadata": {
     "execution": {
@@ -2623,7 +2618,7 @@
        "0.7912087912087912"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2634,7 +2629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 69,
    "id": "753610cc",
    "metadata": {
     "execution": {
@@ -2652,27 +2647,32 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tabis\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "ypredMain = model.predict(X_test)"
+    "ypredMain = model.predict([[1,1,1,1.161075,2]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 1, 1, 1, 0, 1, 0, 1, 1, 1,\n",
-       "       0, 0, 1, 1, 0, 1, 1, 1, 0, 0, 1, 1, 1, 1, 0, 1, 0, 0, 1, 0, 1, 0,\n",
-       "       1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
-       "       1, 0, 1, 0, 1, 1, 1, 0, 0, 1, 0, 0, 1, 1, 0, 0, 1, 1, 0, 1, 0, 1,\n",
-       "       1, 1, 0], dtype=int64)"
+       "array([0], dtype=int64)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2775,6 +2775,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "id": "2db8983a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tabis\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\sklearn\\base.py:465: UserWarning: X does not have valid feature names, but KNeighborsClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0], dtype=int64)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict([[1,1,1,1.161075,2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 62,
    "id": "1ecc283d",
    "metadata": {
@@ -2789,7 +2818,7 @@
    },
    "outputs": [],
    "source": [
-    "import pickle as pkl"
+    "#import pickle as pkl"
    ]
   },
   {
@@ -2798,8 +2827,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('model_knn', 'wb') as f:\n",
-    "    pkl.dump(model, f)"
+    "#with open('model_knn', 'wb') as f:\n",
+    "#    pkl.dump(model, f)"
    ]
   },
   {
